Modify nginx conf.

--- a/shredder/nginx-web-server/conf/nginx.conf
+++ b/shredder/nginx-web-server/conf/nginx.conf
@@ -46,12 +46,16 @@ http {
 
   lua_shared_dict config 32k;
 
-#  init_by_lua_block {
-#    local bridge_tracer = require "opentracing_bridge_tracer"
-#    local GenericObjectPool = require "GenericObjectPool"
-#    local ngx = ngx
-#    local jwt = require "resty.jwt"
-#    local cjson = require 'cjson'
+  init_by_lua_block {
+    local bridge_tracer = require "opentracing_bridge_tracer"
+    local GenericObjectPool = require "GenericObjectPool"
+    local ngx = ngx
+    local jwt = require "resty.jwt"
+    local cjson = require 'cjson'
+    local config = ngx.shared.config;
+    config:set("secret", "secret")
+    config:set("cookie_ttl", 3600 * 24)
+  }
 #    local UserTimelineServiceClient = require 'social_network_UserTimelineService'
 #    local SocialGraphServiceClient = require 'social_network_SocialGraphService'
 #    local UserServiceClient = require 'social_network_UserService'
@@ -59,10 +63,6 @@ http {
 #    local UniqueIdServiceClient = require 'social_network_UniqueIdService'
 #    local MediaServiceClient = require 'social_network_MediaService'
 
-#    local config = ngx.shared.config;
-#    config:set("secret", "secret")
-#    config:set("cookie_ttl", 3600 * 24)
-#  }
 
   server {
 
