Modify nginx to connect to shredder.

--- a/shredder/nginx-web-server/conf/nginx.conf
+++ b/shredder/nginx-web-server/conf/nginx.conf
@@ -300,13 +300,13 @@ http {
       root pages;
     }
 
-#    location /wrk2-api/home-timeline/read {
-#      content_by_lua '
-#          local client = require "wrk2-api/home-timeline/read"
-#          client.ReadHomeTimeline();
-#      ';
-#    }
-#
+    location /wrk2-api/home-timeline/read {
+      content_by_lua '
+          local client = require "wrk2-api/home-timeline/read"
+          client.ReadHomeTimeline();
+      ';
+    }
+
 #    location /wrk2-api/user-timeline/read {
 #      content_by_lua '
 #          local client = require "wrk2-api/user-timeline/read"
@@ -314,13 +314,13 @@ http {
 #      ';
 #    }
 #
-#    location /wrk2-api/post/compose {
-#      content_by_lua '
-#          local client = require "wrk2-api/post/compose"
-#          client.ComposePost();
-#      ';
-#    }
-#
+    location /wrk2-api/post/compose {
+      content_by_lua '
+          local client = require "wrk2-api/post/compose"
+          client.ComposePost();
+      ';
+    }
+
 #    location /wrk2-api/user/register {
 #      content_by_lua '
 #          local client = require "wrk2-api/user/register"
