Modify user register API to use shredder.

--- a/shredder/nginx-web-server/conf/nginx.conf
+++ b/shredder/nginx-web-server/conf/nginx.conf
@@ -321,12 +321,12 @@ http {
       ';
     }
 
-#    location /wrk2-api/user/register {
-#      content_by_lua '
-#          local client = require "wrk2-api/user/register"
-#          client.RegisterUser();
-#      ';
-#    }
+    location /wrk2-api/user/register {
+      content_by_lua '
+          local client = require "wrk2-api/user/register"
+          client.RegisterUser();
+      ';
+    }
 #
 #    location /wrk2-api/user/follow {
 #      content_by_lua '
