--- a/socialNetwork/docker-compose.yml
+++ b/socialNetwork/docker-compose.yml
@@ -186,7 +186,8 @@ services:
     restart: always
 
   text-service:
-    image: yg397/social-network-microservices
+          #image: yg397/social-network-microservices
+    build: .
     hostname: text-service
 #    ports:
 #      - 10007:9090
